adapt to version 11